--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./js5/script.js"></script>
+    <div class="container1">
+      <h1 class="guitar">guitar</h1>
+      <img class="foto" src="./img/35904690266791.webp" alt="guitar">
+    </div>
+    <div class="container2">
+    <a class="link" href="https://kapterka.com.ua/morskaya-pehota/35-obrmp/"></a>
+    <img class="img" src="./img/received_575475381332454-max-228.jpeg" alt="shewron 35 obrmp">
+  </div>
+    <script src="./js6/script.js"></script>
   </body>
 </html>
