--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container1">
+<!--   <div class="container1">
       <h1 class="guitar">guitar</h1>
       <img class="foto" src="./img/35904690266791.webp" alt="guitar">
     </div>
@@ -14,6 +14,13 @@
     <a class="link" href="https://kapterka.com.ua/morskaya-pehota/35-obrmp/"></a>
     <img class="img" src="./img/received_575475381332454-max-228.jpeg" alt="shewron 35 obrmp">
   </div>
+  <input type="text" id="input">
+  <button type="button" id="btn">Натисне на мене</button>--> 
+  <ul id="ul">
+    <li>firs</li>
+    <li>second</li>
+    <li>third</li>
+  </ul>
     <script src="./js6/script.js"></script>
   </body>
 </html>
