--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-<!--   <div class="container1">
+  <div class="container1">
       <h1 class="guitar">guitar</h1>
       <img class="foto" src="./img/35904690266791.webp" alt="guitar">
     </div>
@@ -15,7 +15,7 @@
     <img class="img" src="./img/received_575475381332454-max-228.jpeg" alt="shewron 35 obrmp">
   </div>
   <input type="text" id="input">
-  <button type="button" id="btn">Натисне на мене</button>--> 
+  <button type="button" id="btn">Натисне на мене</button>
   <ul id="ul">
     <li>firs</li>
     <li>second</li>
