--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .color {
+        color: red;
+      }
+    </style>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-  <div class="container1">
+    <!--<div class="container1">
       <h1 class="guitar">guitar</h1>
       <img class="foto" src="./img/35904690266791.webp" alt="guitar">
     </div>
@@ -20,7 +26,17 @@
     <li>firs</li>
     <li>second</li>
     <li>third</li>
-  </ul>
-    <script src="./js6/script.js"></script>
+  </ul>-->
+
+    <!--<h1 id="text">Header Text</h1>
+  <button id="button">Додати стилі</button>-->
+
+    <!--<input type="text" id="input">
+    <button onclick="displayInput()">Додати</button>
+    <p id="p"></p>-->
+
+    <button class="button" onclick="changeColor()">Click me!</button>
+
+    <script src="./js7/script.js"></script>
   </body>
 </html>
